wallet-ext: fix color and spacing for backup view

--- a/apps/wallet/src/ui/app/pages/initialize/backup/Backup.module.scss
+++ b/apps/wallet/src/ui/app/pages/initialize/backup/Backup.module.scss
@@ -6,15 +6,15 @@
     flex-flow: column nowrap;
     gap: 8px;
     align-self: stretch;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 17px;
-    line-height: 140%;
+    line-height: 1.4;
     padding: 14px;
     border-radius: 15px;
     background: colors.$white;
     border: 1px solid #e9eaeb;
     box-shadow: 0 1px 2px rgba(16 24 40 / 5%);
-    color: colors.$gray-85;
+    color: colors.$gray-75;
 }
 
 .copy {
@@ -22,6 +22,7 @@
     color: colors.$sui-dark-blue;
     align-self: flex-end;
     cursor: pointer;
+    line-height: 1;
 
     @include utils.typography('Primary/CAPTION-SB');
 }
@@ -30,6 +31,7 @@
     text-align: center;
     color: colors.$gray-75;
     margin-top: 15px;
+    line-height: 1;
 
     @include utils.typography('ParagraphPrimary/P2-R');
 }
@@ -49,7 +51,7 @@
 .btn {
     display: flex;
     flex-flow: row nowrap;
-    margin-top: 45px;
+    margin-top: 16px;
     align-self: stretch;
     padding: 14px 20px;
 }
