--- a/apps/wallet/src/ui/app/pages/initialize/import/steps/StepOne.module.scss
+++ b/apps/wallet/src/ui/app/pages/initialize/import/steps/StepOne.module.scss
@@ -8,7 +8,7 @@
     box-shadow: 0 1px 2px rgba(16 24 40 / 5%);
     border-radius: 15px;
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 140%;
     color: colors.$gray-75;
     align-self: stretch;
@@ -17,7 +17,7 @@
 
     &::placeholder {
         color: colors.$gray-65;
-        font-weight: 500;
+        font-weight: 400;
     }
 }
 
